--- a/ansible/roles/backend/internal/Dockerfile
+++ b/ansible/roles/backend/internal/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
-COPY requirements.txt .
+COPY internal/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Expose port and define command
