--- a/ansible/roles/backend/tasks/deploy.yml
+++ b/ansible/roles/backend/tasks/deploy.yml
@@ -66,7 +66,7 @@
 
 - name: Deploy backend application code from GitHub
   ansible.builtin.git:
-    repo: "https://github.com/{{ github_owner }}/{{ service_repo_names.backend }}.git"
+    repo: "https://{{ github_token }}@github.com/{{ github_owner }}/{{ service_repo_names.backend }}.git"
     dest: "{{ deployment_paths.src_dir }}/{{ service_repo_names.backend }}"
     version: "{{ backend_ref | mandatory('backend_ref must be provided') }}"
     accept_hostkey: yes
