feat: 複数のGitHub PATを導入し、Backendコード取得の認証を安全に実装

--- a/ansible/roles/backend/tasks/deploy.yml
+++ b/ansible/roles/backend/tasks/deploy.yml
@@ -66,10 +66,9 @@
 
 - name: Deploy backend application code from GitHub
   ansible.builtin.git:
-    repo: "https://{{ github_token }}@github.com/{{ github_owner }}/{{ service_repo_names.backend }}.git"
+    repo: "https://{{ github_token_backend }}@github.com/{{ github_owner }}/{{ service_repo_names.backend }}.git"
     dest: "{{ deployment_paths.src_dir }}/{{ service_repo_names.backend }}"
     version: "{{ backend_ref | mandatory('backend_ref must be provided') }}"
-    accept_hostkey: yes
     force: yes
   become: yes
   tags:
