--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -152,6 +152,7 @@ jobs:
               "prod_ssh_key_path": "~/.ssh/ansible_deploy_key",
               "backend_ref": "${{ env.BACKEND_REF }}",
               "backend_image_tag": "${{ env.BACKEND_IMAGE_TAG }}",
-              "github_token": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_BACKEND }}"
+              "github_token_backend": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_BACKEND }}",
+              "github_token_release_tools": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_RELEASE_TOOLS }}"
             }' \
             --tags "$TAGS"
