--- a/.github/workflows/deploy_database.yml
+++ b/.github/workflows/deploy_database.yml
@@ -61,6 +61,7 @@ jobs:
               "prod_ssh_user": "${{ vars.PROD_SSH_USER }}",
               "prod_ssh_key_path": "~/.ssh/ansible_deploy_key",
               "database_ref": "${{ github.event.inputs.database_ref }}",
+              "backend_image_tag": "${{ vars.RELEASE_VERSION }}",
               "postgres_image_tag": "${{ github.event.inputs.release_version || vars.RELEASE_VERSION }}",
               "github_token_database": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_DATABASE }}"
             }' \
