--- a/.github/workflows/deploy_database.yml
+++ b/.github/workflows/deploy_database.yml
@@ -43,8 +43,7 @@ jobs:
           chmod 600 ~/.ssh/known_hosts
       - name: Install PostgreSQL dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y python3-psycopg2
+          pipx inject ansible-core psycopg2-binary
           ansible-galaxy collection install community.postgresql --force
       - name: Deploy
         run: |
