詳細ログを表示させる

--- a/.github/workflows/deploy_database.yml
+++ b/.github/workflows/deploy_database.yml
@@ -65,4 +65,4 @@ jobs:
               "postgres_image_tag": "${{ github.event.inputs.release_version || vars.RELEASE_VERSION }}",
               "github_token_database": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_DATABASE }}"
             }' \
-            --tags "$TAGS"
+            --tags "$TAGS" -vvv
