fix(ansible): DBコンテナ起動後のマイグレーション実行待ち合わせ処理を追加

--- a/ansible/roles/database/tasks/migrate.yml
+++ b/ansible/roles/database/tasks/migrate.yml
@@ -11,7 +11,7 @@
       );
     user: postgres
   register: result
-  until: result.rc == 0
+  until: result is success
   retries: 10
   delay: 5
   no_log: true
