secrets-apiビルドワークフローのsecrets_version変数を修正

--- a/.github/workflows/build_secrets.yml
+++ b/.github/workflows/build_secrets.yml
@@ -68,7 +68,7 @@ jobs:
           cd ansible
           ansible-playbook playbook_build_secrets.yml \
             --inventory inventory/ci.yml \
-            --extra-vars '{"target_hosts":"ci-server", "secrets_image_tag":"${{ env.SECRETS_IMAGE_TAG }}"}' \
+            --extra-vars '{"target_hosts":"ci-server", "secrets_version":"${{ env.SECRETS_IMAGE_TAG }}"}' \
             --tags "build-secrets"
           
           docker push ${{ env.SECRETS_IMAGE_NAME }}:${{ env.SECRETS_IMAGE_TAG }}
