CI/CDワークフローのsecrets関連変数とVaultファイルパスの渡し方を修正

--- a/.github/workflows/deploy_secrets.yml
+++ b/.github/workflows/deploy_secrets.yml
@@ -87,6 +87,7 @@ jobs:
           chmod 600 ~/.ssh/known_hosts
 
       - name: Setup Ansible Vault for Production Deployment
+        id: setup-vault-secrets
         uses: ./.github/actions/setup-ansible-vault
         with:
           ansible_vault_password: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
@@ -122,6 +123,7 @@ jobs:
               "secrets_ref": "${{ env.SECRETS_REF }}",
               "secrets_version": "${{ env.SECRETS_IMAGE_TAG }}",
               "github_token_secrets": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_SECRETS }}",
-              "github_token_release_tools": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_RELEASE_TOOLS }}"
+              "github_token_release_tools": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_RELEASE_TOOLS }}",
+              "secrets_vault_file_path": "${{ steps.setup-vault-secrets.outputs.secrets_file_path }}"
             }' \
             --tags "$TAGS"
