暗号化後DBパスワードをgit hub secretsで管理させるように変更

--- a/ansible/roles/secrets/tasks/main.yml
+++ b/ansible/roles/secrets/tasks/main.yml
@@ -1,68 +1,5 @@
 ---
-- name: Read secret_key from vault file for secrets-api
-  ansible.builtin.shell: |
-    ansible-vault decrypt --output - --vault-password-file {{ playbook_dir }}/.vault_pass "{{ secrets_vault_file_path }}" | python3 -c "
-    import sys
-    import yaml
-    data = yaml.safe_load(sys.stdin) or {}
-    secret_key = data.get('secret_key', '')
-    if secret_key:
-        print(secret_key)
-    else:
-        sys.exit(1)
-    "
-  register: secrets_api_secret_key_result
-  changed_when: false
-  delegate_to: localhost
-  become: no
-  run_once: true
-  tags:
-    - secrets
-    - deploy
-    - deploy-all
-
-- name: Set secret_key fact for secrets-api
-  ansible.builtin.set_fact:
-    secrets_api_secret_key: "{{ secrets_api_secret_key_result.stdout | trim }}"
-  tags:
-    - secrets
-    - deploy
-    - deploy-all
-
-- name: Fail if secrets_api_secret_key is missing
-  ansible.builtin.fail:
-    msg: "vault-config.yaml.vault.*にsecrets_api_secret_keyが設定されていません"
-  when: secrets_api_secret_key | length == 0
-  tags:
-    - secrets
-    - deploy
-    - deploy-all
-
-- name: Generate secrets.yaml.encrypted locally for secrets-api
-  ansible.builtin.shell: |
-    python3 {{ playbook_dir }}/scripts/encrypt_secrets.py \
-      "{{ secrets_vault_file_path }}" \
-      "{{ secrets_api_secret_key }}" \
-      "/tmp/secrets.yaml.encrypted"
-  changed_when: true
-  delegate_to: localhost
-  become: no
-  tags:
-    - secrets
-    - deploy
-    - deploy-all
-
-- name: Copy secrets.yaml.encrypted to remote server for secrets-api
-  ansible.builtin.copy:
-    src: "/tmp/secrets.yaml.encrypted"
-    dest: "{{ deployment_paths.conf_dir }}/secrets/config/secrets.yaml.encrypted"
-    mode: '0600'
-    owner: "{{ app_user | mandatory('app_user must be set in inventory') }}"
-    group: "{{ app_user | mandatory('app_user must be set in inventory') }}"
-  tags:
-    - secrets
-    - deploy
-    - deploy-all
+# secrets-api用ファイルのコピー（暗号化・復号化処理は一切行わない）
 
 - name: Create secrets-api config directory
   ansible.builtin.file:
@@ -76,13 +13,25 @@
     - deploy
     - deploy-all
 
-- name: Deploy config.yaml for secrets-api
-  ansible.builtin.template:
-    src: config.yaml.j2
+- name: Copy secrets.yaml.encrypted to remote server for secrets-api
+  ansible.builtin.copy:
+    src: "{{ secrets_yaml_encrypted_path }}"
+    dest: "{{ deployment_paths.conf_dir }}/secrets/config/secrets.yaml.encrypted"
+    mode: '0600'
+    owner: "{{ app_user | mandatory('app_user must be set in inventory') }}"
+    group: "{{ app_user | mandatory('app_user must be set in inventory') }}"
+  tags:
+    - secrets
+    - deploy
+    - deploy-all
+
+- name: Copy config.yaml to remote server for secrets-api
+  ansible.builtin.copy:
+    src: "{{ config_yaml_path }}"
     dest: "{{ deployment_paths.conf_dir }}/secrets/config/config.yaml"
     mode: '0644'
-    owner: "{{ app_user }}"
-    group: "{{ app_user }}"
+    owner: "{{ app_user | mandatory('app_user must be set in inventory') }}"
+    group: "{{ app_user | mandatory('app_user must be set in inventory') }}"
   tags:
     - secrets
     - deploy
@@ -92,7 +41,7 @@
   ansible.builtin.file:
     path: "{{ deployment_paths.conf_dir }}/secrets/tokens"
     state: directory
-    mode: '0700' # トークン生成先なので厳しめに
+    mode: '0700'
     owner: "{{ app_user }}"
     group: "{{ app_user }}"
   tags:
