--- a/.github/workflows/deploy_secrets.yml
+++ b/.github/workflows/deploy_secrets.yml
@@ -86,14 +86,13 @@ jobs:
           echo "${{ secrets.PROD_SSH_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
 
-      - name: Setup Ansible Vault for Production Deployment
-        id: setup-vault-secrets
-        uses: ./.github/actions/setup-ansible-vault
+      - name: Write Secrets Files for Production Deployment
+        id: write-secrets-files
+        uses: ./.github/actions/write-secrets-files
         with:
-          ansible_vault_password: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
-          env_name: prod 
-          db_password_plaintext: ${{ secrets.PROD_DB_PASSWORD_PLAINTEXT }}
-          secret_key_plaintext: ${{ secrets.PROD_SECRET_KEY_PLAINTEXT }}
+          secret_key: ${{ secrets.PROD_SECRET_KEY }}
+          db_password_encrypted: ${{ secrets.PROD_DB_PASSWORD_ENCRYPTED }}
+          env_name: prod
 
       # --- デプロイ工程 ---
       - name: Deploy Secrets API Application
@@ -114,7 +113,6 @@ jobs:
           cd ansible
           ansible-playbook playbook_deploy_secrets.yml \
             --inventory inventory/production.yml \
-            --vault-password-file .vault_pass \
             --extra-vars '{
               "target_hosts": "production",
               "prod_host": "${{ vars.PROD_HOST }}",
@@ -124,6 +122,7 @@ jobs:
               "secrets_version": "${{ env.SECRETS_IMAGE_TAG }}",
               "github_token_secrets": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_SECRETS }}",
               "github_token_release_tools": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_RELEASE_TOOLS }}",
-              "secrets_vault_file_path": "${{ steps.setup-vault-secrets.outputs.secrets_file_path }}"
+              "secrets_yaml_encrypted_path": "${{ steps.write-secrets-files.outputs.secrets_yaml_encrypted_path }}",
+              "config_yaml_path": "${{ steps.write-secrets-files.outputs.config_yaml_path }}"
             }' \
             --tags "$TAGS"
