--- a/ansible/playbook_deploy_secrets.yml
+++ b/ansible/playbook_deploy_secrets.yml
@@ -15,7 +15,7 @@
     - name: Update docker-compose and restart secrets-api
       ansible.builtin.include_role:
         name: docker
-        tasks_from: deploy
+        tasks_from: deploy_compose
       vars:
         service_name: secrets
       tags:
