--- a/.github/workflows/deploy_secrets.yml
+++ b/.github/workflows/deploy_secrets.yml
@@ -123,6 +123,7 @@ jobs:
               "github_token_secrets": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_SECRETS }}",
               "github_token_release_tools": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_RELEASE_TOOLS }}",
               "secrets_yaml_encrypted_path": "${{ steps.write-secrets-files.outputs.secrets_yaml_encrypted_path }}",
-              "config_yaml_path": "${{ steps.write-secrets-files.outputs.config_yaml_path }}"
+              "config_yaml_path": "${{ steps.write-secrets-files.outputs.config_yaml_path }}",
+              "postgres_image_tag": "${{ env.RELEASE_VERSION }}" 
             }' \
             --tags "$TAGS"
