--- a/.github/workflows/deploy_database.yml
+++ b/.github/workflows/deploy_database.yml
@@ -1,39 +1,70 @@
 name: Deploy Database
+
 on:
   workflow_dispatch:
     inputs:
       run_deploy_image:
-        description: '1. イメージを更新 (Pull & Restart)'
+        description: '1. [デプロイ:イメージ] サーバーの postgres イメージを更新 (Pull & Restart)'
         required: false
         type: boolean
         default: false
       run_deploy_migrations:
-        description: '2. マイグレーションを実行'
+        description: '2. [マイグレーション] DB マイグレーションを実行'
         required: false
         type: boolean
         default: false
       release_version:
-        description: 'デプロイ対象タグ (例: v1.0.0)'
+        description: 'デプロイ対象のリリースバージョン (例: v1.0.0。未指定時はリポジトリ変数を参照)'
         required: false
         type: string
       database_ref:
-        description: 'database リポジトリの ref'
+        description: 'デプロイする database リポジトリの ref (branch/tag/sha)'
         required: false
         default: 'main'
         type: string
+      database_target_version:
+        description: 'マイグレーション対象バージョン (例: v1.1.0)'
+        required: false
+        type: string
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+
     steps:
-      - name: Checkout
+      - name: Checkout art-gallery-release-tools repository
         uses: actions/checkout@v4
-      - name: Setup Ansible Vault
-        uses: ./.github/actions/setup-ansible-vault
-        with:
-          ansible_vault_password: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
-          env_name: prod
-          db_password_plaintext: ${{ secrets.PROD_DB_PASSWORD_PLAINTEXT }}
-          secret_key_plaintext: ${{ secrets.PROD_SECRET_KEY_PLAINTEXT }}
+
+      - name: Validate Inputs
+        run: |
+          if [ "${{ github.event.inputs.run_deploy_image }}" != "true" ] && [ "${{ github.event.inputs.run_deploy_migrations }}" != "true" ]; then
+            echo "::error::'run_deploy_image' または 'run_deploy_migrations' の少なくとも一方は 'true' に設定してください。"
+            exit 1
+          fi
+
+      - name: Install yq (YAML processor)
+        run: |
+          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
+
+      - name: Set Context
+        run: |
+          VERSION="${{ github.event.inputs.release_version || vars.RELEASE_VERSION }}"
+          if [ -z "$VERSION" ]; then
+            echo "::error::RELEASE_VERSION が定義されていません。"
+            exit 1
+          fi
+          echo "RELEASE_VERSION=${VERSION}" >> $GITHUB_ENV
+          echo "DATABASE_REF=${{ github.event.inputs.database_ref }}" >> $GITHUB_ENV
+
+      - name: Install Ansible and dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ansible
+          ansible-galaxy collection install community.docker
+
       - name: Setup SSH for Production Deployment
         run: |
           mkdir -p ~/.ssh
@@ -41,28 +72,43 @@ jobs:
           chmod 600 ~/.ssh/ansible_deploy_key
           echo "${{ secrets.PROD_SSH_KNOWN_HOSTS }}" >> ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
-      - name: Deploy
+
+      - name: Write Ansible extra-vars file
+        run: |
+          cat > /tmp/ansible_vars.json << 'VARS_EOF'
+          {
+            "target_hosts": "production",
+            "prod_host": "${{ vars.PROD_HOST }}",
+            "prod_ssh_user": "${{ vars.PROD_SSH_USER }}",
+            "prod_ssh_key_path": "~/.ssh/ansible_deploy_key",
+            "database_ref": "${{ env.DATABASE_REF }}",
+            "backend_image_tag": "${{ env.RELEASE_VERSION }}",
+            "postgres_image_tag": "${{ env.RELEASE_VERSION }}",
+            "database_target_version": "${{ github.event.inputs.database_target_version }}",
+            "github_token_database": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_DATABASE }}"
+          }
+          VARS_EOF
+          chmod 600 /tmp/ansible_vars.json
+
+      - name: Deploy Database
         run: |
           TAGS=""
+
           if [ "${{ github.event.inputs.run_deploy_image }}" == "true" ]; then
             TAGS="deploy-compose,update-postgres-image"
           fi
+
           if [ "${{ github.event.inputs.run_deploy_migrations }}" == "true" ]; then
             [ -n "$TAGS" ] && TAGS="$TAGS,"
             TAGS="${TAGS}deploy-database-code,database-migration"
           fi
+
           cd ansible
           ansible-playbook playbook_deploy_database.yml \
             --inventory inventory/production.yml \
-            --vault-password-file .vault_pass \
-            --extra-vars '{
-              "target_hosts": "production",
-              "prod_host": "${{ vars.PROD_HOST }}",
-              "prod_ssh_user": "${{ vars.PROD_SSH_USER }}",
-              "prod_ssh_key_path": "~/.ssh/ansible_deploy_key",
-              "database_ref": "${{ github.event.inputs.database_ref }}",
-              "backend_image_tag": "${{ vars.RELEASE_VERSION }}",
-              "postgres_image_tag": "${{ github.event.inputs.release_version || vars.RELEASE_VERSION }}",
-              "github_token_database": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_DATABASE }}"
-            }' \
-            --tags "$TAGS" -vvv
+            --extra-vars "@/tmp/ansible_vars.json" \
+            --tags "$TAGS"
+
+      - name: Remove extra-vars file
+        if: always()
+        run: rm -f /tmp/ansible_vars.json
