--- a/.github/workflows/deploy_secrets.yml
+++ b/.github/workflows/deploy_secrets.yml
@@ -95,16 +95,34 @@ jobs:
           env_name: prod
 
       # --- デプロイ工程 ---
+      - name: Write Ansible extra-vars file
+        run: |
+          cat > /tmp/ansible_vars.json << 'VARS_EOF'
+          {
+            "target_hosts": "production",
+            "prod_host": "${{ vars.PROD_HOST }}",
+            "prod_ssh_user": "${{ vars.PROD_SSH_USER }}",
+            "prod_ssh_key_path": "~/.ssh/ansible_deploy_key",
+            "secrets_ref": "${{ env.SECRETS_REF }}",
+            "secrets_version": "${{ env.SECRETS_IMAGE_TAG }}",
+            "github_token_secrets": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_SECRETS }}",
+            "github_token_release_tools": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_RELEASE_TOOLS }}",
+            "secrets_yaml_encrypted_path": "${{ steps.write-secrets-files.outputs.secrets_yaml_encrypted_path }}",
+            "config_yaml_path": "${{ steps.write-secrets-files.outputs.config_yaml_path }}",
+            "postgres_image_tag": "${{ env.RELEASE_VERSION }}",
+            "backend_image_tag": "${{ env.RELEASE_VERSION }}"
+          }
+          VARS_EOF
+          chmod 600 /tmp/ansible_vars.json
+
       - name: Deploy Secrets API Application
         run: |
           TAGS=""
           
-          # イメージ更新が選ばれたら
           if [ "${{ github.event.inputs.run_deploy_image }}" == "true" ]; then
             TAGS="deploy-compose,update-secrets-image"
           fi
           
-          # コード更新が選ばれたら
           if [ "${{ github.event.inputs.run_deploy_code }}" == "true" ]; then
             [ -n "$TAGS" ] && TAGS="$TAGS,"
             TAGS="${TAGS}secrets,restart-secrets"
@@ -113,18 +131,9 @@ jobs:
           cd ansible
           ansible-playbook playbook_deploy_secrets.yml \
             --inventory inventory/production.yml \
-            --extra-vars '{
-              "target_hosts": "production",
-              "prod_host": "${{ vars.PROD_HOST }}",
-              "prod_ssh_user": "${{ vars.PROD_SSH_USER }}",
-              "prod_ssh_key_path": "~/.ssh/ansible_deploy_key",
-              "secrets_ref": "${{ env.SECRETS_REF }}",
-              "secrets_version": "${{ env.SECRETS_IMAGE_TAG }}",
-              "github_token_secrets": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_SECRETS }}",
-              "github_token_release_tools": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_RELEASE_TOOLS }}",
-              "secrets_yaml_encrypted_path": "${{ steps.write-secrets-files.outputs.secrets_yaml_encrypted_path }}",
-              "config_yaml_path": "${{ steps.write-secrets-files.outputs.config_yaml_path }}",
-              "postgres_image_tag": "${{ env.RELEASE_VERSION }}",
-              "backend_image_tag": "${{ env.RELEASE_VERSION }}"
-            }' \
+            --extra-vars "@/tmp/ansible_vars.json" \
             --tags "$TAGS"
+
+      - name: Remove extra-vars file
+        if: always()
+        run: rm -f /tmp/ansible_vars.json
