--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -51,7 +51,7 @@ container_names:
 
 # URL設定
 frontend_url: "{{ 'https' if ssl_enabled else 'http' }}://{{ domain_name }}"
-vite_api_base_url: "{{ frontend_url }}/api"
+# vite_api_base_url は削除済み（Frontend は /api 相対パスを使用するため不要）
 
 # Dockerネットワーク名
 docker_network_name: "{{ app_name }}-network"
