--- a/.github/workflows/reload_nginx.yml
+++ b/.github/workflows/reload_nginx.yml
@@ -1,15 +1,17 @@
-name: Deploy Frontend
+name: Reload Nginx
+
+# nginx -s reload のみを実行する軽量ワークフロー
+# nginx.conf の変更は行わない（git pull なし）
+# 用途:
+#   - frontend デプロイ後の手動リロード再試行
+#   - nginx コンテナの動作確認
+#   - deploy_frontend.yml が失敗した際のリカバリ
 
 on:
   workflow_dispatch:
-    inputs:
-      frontend_artifact_id:
-        description: 'art-gallery-frontend の Artifact ID（CI でアップロードされた dist/ の ID）'
-        required: true
-        type: string
 
 jobs:
-  deploy:
+  reload:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -18,14 +20,7 @@ jobs:
       - name: Checkout art-gallery-release-tools repository
         uses: actions/checkout@v4
 
-      - name: Validate Inputs
-        run: |
-          if [ -z "${{ github.event.inputs.frontend_artifact_id }}" ]; then
-            echo "::error::'frontend_artifact_id' は必須です。"
-            exit 1
-          fi
-
-      - name: Install Ansible and dependencies
+      - name: Install Ansible
         run: |
           sudo apt-get update
           sudo apt-get install -y ansible
@@ -45,20 +40,18 @@ jobs:
             "target_hosts": "production",
             "prod_host": "${{ vars.PROD_HOST }}",
             "prod_ssh_user": "${{ vars.PROD_SSH_USER }}",
-            "prod_ssh_key_path": "~/.ssh/ansible_deploy_key",
-            "frontend_artifact_id": "${{ github.event.inputs.frontend_artifact_id }}",
-            "github_token_frontend": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_FRONTEND }}"
+            "prod_ssh_key_path": "~/.ssh/ansible_deploy_key"
           }
           VARS_EOF
           chmod 600 /tmp/ansible_vars.json
 
-      - name: Deploy Frontend
+      - name: Reload Nginx
         run: |
           cd ansible
-          ansible-playbook playbook_deploy_frontend.yml \
+          ansible-playbook playbook_reload_nginx.yml \
             --inventory inventory/production.yml \
             --extra-vars "@/tmp/ansible_vars.json" \
-            --tags "deploy-frontend,reload-nginx"
+            --tags "reload-nginx"
 
       - name: Remove extra-vars file
         if: always()
