--- a/.github/workflows/deploy_secrets.yml
+++ b/.github/workflows/deploy_secrets.yml
@@ -110,7 +110,8 @@ jobs:
             "secrets_yaml_encrypted_path": "${{ steps.write-secrets-files.outputs.secrets_yaml_encrypted_path }}",
             "config_yaml_path": "${{ steps.write-secrets-files.outputs.config_yaml_path }}",
             "postgres_image_tag": "${{ env.RELEASE_VERSION }}",
-            "backend_image_tag": "${{ env.RELEASE_VERSION }}"
+            "backend_image_tag": "${{ env.RELEASE_VERSION }}",
+            "nginx_image_tag": "${{ env.RELEASE_VERSION }}"
           }
           VARS_EOF
           chmod 600 /tmp/ansible_vars.json
