--- a/.github/workflows/deploy_backend.yml
+++ b/.github/workflows/deploy_backend.yml
@@ -102,6 +102,7 @@ jobs:
             "backend_image_tag": "${{ env.BACKEND_IMAGE_TAG }}",
             "postgres_image_tag": "${{ env.RELEASE_VERSION }}",
             "secrets_version": "${{ env.RELEASE_VERSION }}",
+            "nginx_image_tag": "${{ env.RELEASE_VERSION }}",
             "github_token_backend": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_BACKEND }}",
             "github_token_release_tools": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_RELEASE_TOOLS }}"
           }
