--- a/.github/workflows/deploy_frontend.yml
+++ b/.github/workflows/deploy_frontend.yml
@@ -25,6 +25,15 @@ jobs:
             exit 1
           fi
 
+      - name: Set Context (RELEASE_VERSION for deploy_compose)
+        run: |
+          VERSION="${{ vars.RELEASE_VERSION }}"
+          if [ -z "$VERSION" ]; then
+            echo "::error::vars.RELEASE_VERSION が定義されていません。"
+            exit 1
+          fi
+          echo "RELEASE_VERSION=${VERSION}" >> $GITHUB_ENV
+
       - name: Install Ansible and dependencies
         run: |
           sudo apt-get update
@@ -47,7 +56,11 @@ jobs:
             "prod_ssh_user": "${{ vars.PROD_SSH_USER }}",
             "prod_ssh_key_path": "~/.ssh/ansible_deploy_key",
             "frontend_artifact_id": "${{ github.event.inputs.frontend_artifact_id }}",
-            "github_token_frontend": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_FRONTEND }}"
+            "github_token_frontend": "${{ secrets.GH_TOKEN_FOR_ART_GALLERY_FRONTEND }}",
+            "backend_image_tag": "${{ env.RELEASE_VERSION }}",
+            "postgres_image_tag": "${{ env.RELEASE_VERSION }}",
+            "secrets_version": "${{ env.RELEASE_VERSION }}",
+            "nginx_image_tag": "${{ env.RELEASE_VERSION }}"
           }
           VARS_EOF
           chmod 600 /tmp/ansible_vars.json
