--- a/ansible/roles/secrets/tasks/main.yml
+++ b/ansible/roles/secrets/tasks/main.yml
@@ -48,3 +48,10 @@
     - secrets
     - deploy
     - deploy-all
+
+- name: Include deploy tasks
+  ansible.builtin.include_tasks: deploy.yml
+  tags:
+    - deploy
+    - deploy-secrets
+    - deploy-all
