--- a/ansible/roles/secrets/tasks/main.yml
+++ b/ansible/roles/secrets/tasks/main.yml
@@ -52,6 +52,6 @@
 - name: Include deploy tasks
   ansible.builtin.include_tasks: deploy.yml
   tags:
+    - secrets
     - deploy
-    - deploy-secrets
     - deploy-all
