git pullをアプリユーザーで行う

--- a/ansible/roles/secrets/tasks/deploy.yml
+++ b/ansible/roles/secrets/tasks/deploy.yml
@@ -8,4 +8,5 @@
     version: "{{ secrets_ref | mandatory('secrets_ref must be provided') }}"
     force: yes
   become: yes
+  become_user: "{{ app_user }}"
   tags: [secrets, deploy-secrets, deploy-all]
