コードデプロイ時にgit pullがappユーザーで動かないため、ANSIBLE_ALLOW_WORLD_READABLE_TMPFILESを設定する

--- a/.github/workflows/deploy_secrets.yml
+++ b/.github/workflows/deploy_secrets.yml
@@ -134,6 +134,8 @@ jobs:
             --inventory inventory/production.yml \
             --extra-vars "@/tmp/ansible_vars.json" \
             --tags "$TAGS"
+        env:
+          ANSIBLE_ALLOW_WORLD_READABLE_TMPFILES: 1
 
       - name: Remove extra-vars file
         if: always()
