まだ権限エラーが解消しないので、cfgファイルを使うように変更

--- a/.github/workflows/deploy_secrets.yml
+++ b/.github/workflows/deploy_secrets.yml
@@ -135,7 +135,7 @@ jobs:
             --extra-vars "@/tmp/ansible_vars.json" \
             --tags "$TAGS"
         env:
-          ANSIBLE_ALLOW_WORLD_READABLE_TMPFILES: 1
+          ANSIBLE_CONFIG: cfg/ansible_deploy_secrets_app.cfg
 
       - name: Remove extra-vars file
         if: always()
