ansibleのバージョンを確認する

--- a/.github/workflows/deploy_secrets.yml
+++ b/.github/workflows/deploy_secrets.yml
@@ -116,6 +116,9 @@ jobs:
           VARS_EOF
           chmod 600 /tmp/ansible_vars.json
 
+      - name: Check Ansible version
+        run: ansible --version
+        
       - name: Deploy Secrets API Application
         run: |
           TAGS=""
